video uploaded system added

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-host = "localhost"
-user = "kbtonmoy"
-password = "6677"
-database = "forclient"
+# Database Configuration
+host = "localhost"           # The hostname of the database server. Mostly localhost
+user = "kbtonmoy"            # The username for database access
+password = "6677"            # The password for database access
+database = "forclient"       # The name of the database to connect to
+
+# Video Server Configuration : Make sure it ends with trailing slash /
+video_server_base_url = "https://server.inventoryboss.video/"
+video_server_username = "michael"                               
+video_server_password = "uAmPg8uQiGDGnm8ntJy"                  
