unfinished post publishing

--- a/.env
+++ b/.env
@@ -7,4 +7,9 @@ database = "forclient"       # The name of the database to connect to
 # Video Server Configuration : Make sure it ends with trailing slash /
 video_server_base_url = "https://server.inventoryboss.video/"
 video_server_username = "michael"                               
-video_server_password = "uAmPg8uQiGDGnm8ntJy"                  
+video_server_password = "uAmPg8uQiGDGnm8ntJy"              
+
+# Wordpress Website Credentails
+wp_site_url = "https://video.inventoryboss.net/"
+wp_site_username = "kbtonmoy"
+wp_site_application_password = "fsWv xiqV Qy0x AnIs C6X7 38DT"    
