single item uploading working wp

--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ video_server_username = "michael"
 video_server_password = "uAmPg8uQiGDGnm8ntJy"              
 
 # Wordpress Website Credentails
-wp_site_url = "https://video.inventoryboss.net/"
-wp_site_username = "kbtonmoy"
-wp_site_application_password = "fsWv xiqV Qy0x AnIs C6X7 38DT"    
+wp_site_url = "https://inventoryboss.us/"
+wp_site_username = "Developer2024"
+wp_site_application_password = "uRHq ehAL KDUz wl6b L5mp 4R0N"
