--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 altgraph==0.17.4
 attrs==23.1.0
+auto-py-to-exe==2.42.0
+bottle==0.12.25
+bottle-websocket==0.2.9
 cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
@@ -7,13 +10,18 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 darkdetect==0.8.0
 decorator==4.4.2
+Eel==0.16.0
 exceptiongroup==1.2.0
+future==0.18.3
+gevent==23.9.1
+gevent-websocket==0.10.1
 google-api-core==2.14.0
 google-api-python-client==2.109.0
 google-auth==2.24.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
 googleapis-common-protos==1.61.0
+greenlet==3.0.1
 h11==0.14.0
 httplib2==0.22.0
 idna==3.6
@@ -28,6 +36,7 @@ oauthlib==3.2.2
 opencv-python==4.8.1.78
 outcome==1.3.0.post0
 packaging==23.2
+pandas==2.1.4
 pefile==2023.2.7
 Pillow==10.1.0
 proglog==0.1.10
@@ -43,6 +52,9 @@ PyQt5==5.15.10
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.13.0
 PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
 pywin32-ctypes==0.2.2
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -54,7 +66,12 @@ sortedcontainers==2.4.0
 tqdm==4.66.1
 trio==0.23.1
 trio-websocket==0.11.1
+tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.1.0
+webscreenshot==2.94
+whichcraft==0.6.1
 wsproto==1.2.0
 zipp==3.17.0
+zope.event==5.0
+zope.interface==6.1
